deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "active-mq"
  labels:
    name: "active-mq"
